# neurocode-python

./: .dockerignore  .gitignore  DOCUMENTATION_JSON_EXAMPLE.json  Dockerfile  README.md  pyproject.toml  requirements.txt  run.py  test_mongodb_connection.py  test_s3_connection.py
neurocode/: __init__.py  config.py  main.py  worker.py
neurocode/models/: __init__.py  agent_docs.py  schemas.py
neurocode/routes/: chat.py  documentation.py  github.py  health.py  hot_zones.py  internal.py  knowledge_graph.py  mongodb.py  onboarding.py  pull_request.py  task_compass.py  visual_tree.py
neurocode/services/: __init__.py  agent_docs_validation.py  code_analyzer.py  doc_regeneration.py  github_fetcher.py  graph_analytics.py  index_pipeline.py  kg_pipeline.py  llm_service.py  neo4j_service.py  s3_service.py  semantic_clustering.py  task_compass_service.py
neurocode/services/analysis/: __init__.py  code_analyzer.py  tree_builder.py
neurocode/services/chunker/: __init__.py  code_chunker.py  models.py
neurocode/services/config/: __init__.py  agent_docs_bundle_schema.json  agent_guide_schema.json  agent_rule_schema.json  architecture_schema.json  documentation_schema.json  uml_class_diagram_schema.json  uml_sequence_diagram_schema.json  uml_state_diagram_schema.json  uml_use_case_diagram_schema.json
neurocode/services/parser/: __init__.py  call_extractor.py  dependency_extractor.py  language_support.py  models.py  symbol_extractor.py  tree_sitter_parser.py
neurocode/services/storage/: __init__.py  s3_service.py  (+2 more)
scripts/: rename_qdrant_collection.py  strip_docstrings.py
(+17 files in other folders)
